<resources>
    <string name="app_name">In And Out</string>
    <string name="place_an_order_txt">Place an Order</string>
    <string name="double_double">Double Double $3.60 </string>
    <string name="cheese">Cheese burger $2.15 </string>
    <string name="french_fries">Frience Fires $1.65</string>
    <string name="shakes">Shakes $2.20 </string>
    <string name="fountain_drink">Fountain Drink (pick size)</string>
    <string name="small_drink">Small $1.45 </string>
    <string name="medium_drink">Medium $1.55 </string>
    <string name="large_drink">Large $1.75 </string>
    <string name="place_order_btn">PLACE ORDER</string>


    <string name="order_total">Order Total: </string>
    <string name="items_ordered">Items Ordered: </string>
    <string name="subtotal">Subtotal: </string>
    <string name="tax">Tax (8%): </string>
    <string name="start_new_order_btn">START NEW ORDER</string>
</resources>
