<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.orangecoastcollege.cs273.nhoang53.inandout.OrderActivity"
    android:background="@drawable/order_background"
    android:columnCount="2"
    android:rowCount="13">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/place_an_order_txt"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="0" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/double_double"
        android:id="@+id/textView2"
        android:layout_gravity="right"
        android:layout_columnSpan="1"
        android:layout_column="0"
        android:layout_row="1" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/doubleDoubleEditText"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_column="1"
        android:layout_row="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cheese"
        android:id="@+id/textView3"
        android:layout_column="0"
        android:layout_row="2"
        android:layout_gravity="right" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cheeseBurgerEditText"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_row="2"
        android:layout_column="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/french_fries"
        android:id="@+id/textView4"
        android:layout_gravity="right"
        android:layout_column="0"
        android:layout_row="3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/frenchFriesEditText"
        android:layout_gravity="fill_horizontal|left"
        android:layout_marginRight="10dp"
        android:layout_column="1"
        android:layout_row="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/shakes"
        android:id="@+id/textView5"
        android:layout_gravity="right"
        android:layout_column="0"
        android:layout_row="4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/shakesEditText2"
        android:layout_gravity="fill_horizontal|left"
        android:layout_marginRight="10dp"
        android:layout_column="1"
        android:layout_row="4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/fountain_drink"
        android:id="@+id/textView6"
        android:layout_gravity="right"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:layout_row="5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/small_drink"
        android:id="@+id/textView7"
        android:layout_gravity="right"
        android:layout_column="0"
        android:layout_row="6" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/smallDrinkTextView"
        android:layout_gravity="fill_horizontal|left"
        android:layout_marginRight="10dp"
        android:layout_column="1"
        android:layout_row="6" />

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium"
    android:text="@string/medium_drink"
    android:id="@+id/textView8"
    android:layout_gravity="right"
    android:layout_column="0"
    android:layout_row="7" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/mediumDrinkTextView"
        android:layout_gravity="fill_horizontal|left"
        android:layout_marginRight="10dp"
        android:layout_column="1"
        android:layout_row="7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/large_drink"
        android:id="@+id/textView9"
        android:layout_gravity="right"
        android:layout_column="0"
        android:layout_row="8" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/largeDrinkTextView"
        android:layout_gravity="fill_horizontal|left"
        android:layout_marginRight="10dp"
        android:layout_column="1"
        android:layout_row="8" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_order_btn"
        android:id="@+id/placeOrderButton"
        android:layout_columnSpan="2"
        android:layout_row="9"
        android:textStyle="bold"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_column="0" />
</GridLayout>
